--- a/index.html
+++ b/index.html
@@ -20,24 +20,55 @@
   <body>
     <div class="container">
       <div class="options">
-        <svg class="update" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 16 16">
-          <path d="M1,6A5,5,0,1,1,11,6H10A4,4,0,1,0,8.827,8.827l.707.707A5,5,0,0,1,1,6ZM8,6h5L10.5,8.5Z" transform="translate(2 2)" />
+        <svg class="update"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+          <title>Refresh timetable</title>
+          <path d="M3 8a5 5 0 1 1 10 0h2l-2.5 2.5L10 8h2a4 4 0 1 0-1.17 2.83l.7.7A5 5 0 0 1 3 8z" />
         </svg>
-        <svg class="dim" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 16 16">
-          <path style="fill: #222;" d="M-14.21,13.131l-2.12.568L-16.9,11.58l-2.119-.568.568-2.119L-20,7.341l1.551-1.551-.568-2.12L-16.9,3.1-16.33.984l2.12.568L-12.658,0l1.551,1.551L-8.988.984-8.42,3.1l2.12.568-.568,2.12,1.551,1.551L-6.869,8.892l.568,2.119-2.119.568L-8.988,13.7l-2.119-.568-1.551,1.551Z" transform="translate(20.659 0.659)"/>
-          <circle style="fill: #222;" cx="6" cy="6" r="6" transform="translate(2 2)" />
-          <circle class="switch" cx="5" cy="5" r="5" transform="translate(3 3)" />
-          <path style="fill: #222;" d="M4,8H4A4,4,0,0,1,4,0V8Z" transform="translate(4 4)" />
+        <svg class="dim" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+          <title>Switch display mode</title>
+          <path class="dark" d="M-14.2 13.14h-.03l-2.1.56-.56-2.11-.02-.01L-19 11l.56-2.1v-.03L-20 7.34l1.54-1.54v-.02l-.56-2.11 2.11-.56.02-.02.56-2.1 2.1.56h.03L-12.66 0l1.54 1.54h.03L-9 .99l.57 2.11.01.02 2.11.56-.56 2.1v.03l1.54 1.54-1.54 1.54v.02l.56 2.11-2.11.57-.01.01L-9 13.7l-2.1-.56h-.02l-1.54 1.54z"
+            transform="translate(20.66 .66)" />
+          <circle class="switch" cx="5" cy="5" r="5" transform="rotate(180 6.5 6.5)" />
+          <path class="dark" d="M4 8a4 4 0 0 1 0-8v8z" transform="rotate(180 6 6)" />
         </svg>
       </div>
       <div class="days">
-        <p></p>
-        <p></p>
-        <p class="yesterday"></p>
-        <p class="today"></p>
-        <p class="tomorrow"></p>
-        <p></p>
-        <p></p>
+        <svg class="prev" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+          <title>Previous 7 days</title>
+          <path d="M4.82 8l.7-.7 4.95-4.96.71.7L6.23 8l4.95 4.95-.7.7z" />
+        </svg>
+        <div>
+          <p class="day"></p>
+          <p class="date"></p>
+        </div>
+        <div>
+          <p class="day"></p>
+          <p class="date"></p>
+        </div>
+        <div>
+          <p class="day"></p>
+          <p class="date"></p>
+        </div>
+        <div>
+          <p class="day"></p>
+          <p class="date"></p>
+        </div>
+        <div>
+          <p class="day"></p>
+          <p class="date"></p>
+        </div>
+        <div>
+          <p class="day"></p>
+          <p class="date"></p>
+        </div>
+        <div>
+          <p class="day"></p>
+          <p class="date"></p>
+        </div>
+        <svg class="next" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+          <title>Next 7 days</title>
+          <path d="M4.82 8l.7-.7 4.95-4.96.71.7L6.23 8l4.95 4.95-.7.7z" />
+        </svg>
       </div>
       <div class="times">
         <p>9 AM</p>
@@ -54,9 +85,9 @@
       <div class="classes">
         <div class="day"></div>
         <div class="day"></div>
-        <div class="day yesterday"></div>
-        <div class="day today"></div>
-        <div class="day tomorrow"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
         <div class="day"></div>
         <div class="day"></div>
         <div class="line"></div>
