Add hour separators + less translucent classes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,18 @@
         <div class="day"></div>
         <div class="day"></div>
         <div class="day"></div>
+        
         <div class="line"></div>
+
+        <div class="hour" style="top: 10%"></div>
+        <div class="hour" style="top: 20%"></div>
+        <div class="hour" style="top: 30%"></div>
+        <div class="hour" style="top: 40%"></div>
+        <div class="hour" style="top: 50%"></div>
+        <div class="hour" style="top: 60%"></div>
+        <div class="hour" style="top: 70%"></div>
+        <div class="hour" style="top: 80%"></div>
+        <div class="hour" style="top: 90%"></div>
       </div>
     </div>
     <form>
