--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="theme-color" content="#ffffff">
     <title>UoL Timetable</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <script src="js/script.js" defer></script>
   </head>
   <body>
     <div class="container">
