Add notification support

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
         <div class="hour" style="top: 80%"></div>
         <div class="hour" style="top: 90%"></div>
       </div>
+      <div class="notifications">
+        <label for="notify">Notifications?</label>
+        <input type="checkbox" id="notify" name="notify">
+      </div>
     </div>
     <form>
       <div>
