--- a/index.html
+++ b/index.html
@@ -1,121 +1,130 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="manifest" href="icons/site.webmanifest">
-    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#222222">
-    <link rel="shortcut icon" href="favicon.ico">
-    <meta name="msapplication-TileColor" content="#b91d47">
-    <meta name="msapplication-config" content="icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <title>UoL Timetable</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-    <script src="js/script.js" defer></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="options">
-        <svg class="update"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-          <title>Refresh timetable</title>
-          <path d="M3 8a5 5 0 1 1 10 0h2l-2.5 2.5L10 8h2a4 4 0 1 0-1.17 2.83l.7.7A5 5 0 0 1 3 8z" />
-        </svg>
-        <svg class="dim" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-          <title>Switch display mode</title>
-          <path class="dark" d="M-14.2 13.14h-.03l-2.1.56-.56-2.11-.02-.01L-19 11l.56-2.1v-.03L-20 7.34l1.54-1.54v-.02l-.56-2.11 2.11-.56.02-.02.56-2.1 2.1.56h.03L-12.66 0l1.54 1.54h.03L-9 .99l.57 2.11.01.02 2.11.56-.56 2.1v.03l1.54 1.54-1.54 1.54v.02l.56 2.11-2.11.57-.01.01L-9 13.7l-2.1-.56h-.02l-1.54 1.54z"
-            transform="translate(20.66 .66)" />
-          <circle class="switch" cx="5" cy="5" r="5" transform="rotate(180 6.5 6.5)" />
-          <path class="dark" d="M4 8a4 4 0 0 1 0-8v8z" transform="rotate(180 6 6)" />
-        </svg>
-      </div>
-      <div class="days">
-        <svg class="prev" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-          <title>Previous 7 days</title>
-          <path d="M4.82 8l.7-.7 4.95-4.96.71.7L6.23 8l4.95 4.95-.7.7z" />
-        </svg>
-        <div>
-          <p class="day"></p>
-          <p class="date"></p>
-        </div>
-        <div>
-          <p class="day"></p>
-          <p class="date"></p>
-        </div>
-        <div>
-          <p class="day"></p>
-          <p class="date"></p>
-        </div>
-        <div>
-          <p class="day"></p>
-          <p class="date"></p>
-        </div>
-        <div>
-          <p class="day"></p>
-          <p class="date"></p>
-        </div>
-        <div>
-          <p class="day"></p>
-          <p class="date"></p>
-        </div>
-        <div>
-          <p class="day"></p>
-          <p class="date"></p>
-        </div>
-        <svg class="next" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-          <title>Next 7 days</title>
-          <path d="M4.82 8l.7-.7 4.95-4.96.71.7L6.23 8l4.95 4.95-.7.7z" />
-        </svg>
-      </div>
-      <div class="times">
-        <p>9 AM</p>
-        <p>10 AM</p>
-        <p>11 AM</p>
-        <p>12 PM</p>
-        <p>1 PM</p>
-        <p>2 PM</p>
-        <p>3 PM</p>
-        <p>4 PM</p>
-        <p>5 PM</p>
-        <p>6 PM</p>
-      </div>
-      <div class="classes">
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        
-        <div class="line"></div>
 
-        <div class="hour" style="top: 10%"></div>
-        <div class="hour" style="top: 20%"></div>
-        <div class="hour" style="top: 30%"></div>
-        <div class="hour" style="top: 40%"></div>
-        <div class="hour" style="top: 50%"></div>
-        <div class="hour" style="top: 60%"></div>
-        <div class="hour" style="top: 70%"></div>
-        <div class="hour" style="top: 80%"></div>
-        <div class="hour" style="top: 90%"></div>
-      </div>
-      <div class="notifications">
-        <label for="notify">Notifications?</label>
-        <input type="checkbox" id="notify" name="notify">
-      </div>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+  <link rel="manifest" href="icons/site.webmanifest">
+  <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#222222">
+  <link rel="shortcut icon" href="favicon.ico">
+  <meta name="msapplication-TileColor" content="#b91d47">
+  <meta name="msapplication-config" content="icons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+  <title>UoL Timetable</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+  <script src="js/script.js" defer></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="options">
+      <svg class="update" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+        <title>Refresh timetable</title>
+        <path d="M3 8a5 5 0 1 1 10 0h2l-2.5 2.5L10 8h2a4 4 0 1 0-1.17 2.83l.7.7A5 5 0 0 1 3 8z" />
+      </svg>
+      <svg class="dim" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+        <title>Switch display mode</title>
+        <path class="dark"
+          d="M-14.2 13.14h-.03l-2.1.56-.56-2.11-.02-.01L-19 11l.56-2.1v-.03L-20 7.34l1.54-1.54v-.02l-.56-2.11 2.11-.56.02-.02.56-2.1 2.1.56h.03L-12.66 0l1.54 1.54h.03L-9 .99l.57 2.11.01.02 2.11.56-.56 2.1v.03l1.54 1.54-1.54 1.54v.02l.56 2.11-2.11.57-.01.01L-9 13.7l-2.1-.56h-.02l-1.54 1.54z"
+          transform="translate(20.66 .66)" />
+        <circle class="switch" cx="5" cy="5" r="5" transform="rotate(180 6.5 6.5)" />
+        <path class="dark" d="M4 8a4 4 0 0 1 0-8v8z" transform="rotate(180 6 6)" />
+      </svg>
     </div>
-    <form>
+    <div class="days">
+      <svg class="prev" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+        <title>Previous 7 days</title>
+        <path d="M4.82 8l.7-.7 4.95-4.96.71.7L6.23 8l4.95 4.95-.7.7z" />
+      </svg>
       <div>
-        <label for="link">Link to Timetable:</label>
+        <p class="day"></p>
+        <p class="date"></p>
       </div>
       <div>
-        <input id="link" name="link" type="text">
-        <button>Retrieve Timetable</button>
+        <p class="day"></p>
+        <p class="date"></p>
       </div>
-    </form>
-  </body>
+      <div>
+        <p class="day"></p>
+        <p class="date"></p>
+      </div>
+      <div>
+        <p class="day"></p>
+        <p class="date"></p>
+      </div>
+      <div>
+        <p class="day"></p>
+        <p class="date"></p>
+      </div>
+      <div>
+        <p class="day"></p>
+        <p class="date"></p>
+      </div>
+      <div>
+        <p class="day"></p>
+        <p class="date"></p>
+      </div>
+      <svg class="next" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+        <title>Next 7 days</title>
+        <path d="M4.82 8l.7-.7 4.95-4.96.71.7L6.23 8l4.95 4.95-.7.7z" />
+      </svg>
+    </div>
+    <div class="times">
+      <p>9 AM</p>
+      <p>10 AM</p>
+      <p>11 AM</p>
+      <p>12 PM</p>
+      <p>1 PM</p>
+      <p>2 PM</p>
+      <p>3 PM</p>
+      <p>4 PM</p>
+      <p>5 PM</p>
+      <p>6 PM</p>
+    </div>
+    <div class="classes">
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+
+      <div class="line"></div>
+
+      <div class="hour" style="top: 10%"></div>
+      <div class="hour" style="top: 20%"></div>
+      <div class="hour" style="top: 30%"></div>
+      <div class="hour" style="top: 40%"></div>
+      <div class="hour" style="top: 50%"></div>
+      <div class="hour" style="top: 60%"></div>
+      <div class="hour" style="top: 70%"></div>
+      <div class="hour" style="top: 80%"></div>
+      <div class="hour" style="top: 90%"></div>
+    </div>
+    <div class="notifications">
+      <label for="notify">Notifications?</label>
+      <input type="checkbox" id="notify" name="notify">
+    </div>
+  </div>
+  <form>
+    <ol>
+      <li>Go to <a href="https://studentservices.leeds.ac.uk/pls/banprod/timetable_uol">Student Services >
+          Timetable</a></li>
+      <li>Click any "Submit" button</li>
+      <li>Copy entire "timetable.leeds.ac.uk/..." URL</li>
+      <li>Paste URL below</li>
+      <li>Click "Retrieve Timetable"</li>
+    </ol>
+    <div id="content">
+      <input id="link" name="link" type="text" placeholder="Timetable Link">
+      <button>Retrieve Timetable</button>
+    </div>
+  </form>
+</body>
+
 </html>
