--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       media="screen"
       href="css/style.css"
     />
+    <script src="js/ics.deps.min.js"></script>
+    <script src="js/ics.min.js"></script>
   </head>
 
   <body>
@@ -180,7 +182,8 @@
       <div id="content">
         <label for="link">Link:</label>
         <input id="link" name="link" type="text" placeholder="timetable.leeds.ac.uk/..." />
-        <button>Retrieve Timetable</button>
+        <button id="retrieve" type="submit">Retrieve Timetable</button>
+        <button id="download" type="button">Download .ics</button>
       </div>
     </form>
     <!-- <script src="js/script.js"></script> -->
