Add copyright notice for ics.js in readme and homepage

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         <button id="retrieve" type="submit">Retrieve Timetable</button>
         <button id="download" type="button">Download .ics</button>
       </div>
+      <p>This tool uses the <a href="https://github.com/nwcell/ics.js/">ics.js</a> library, which is licensed under <a href="./ics-js-license.txt">the MIT license</a>. </p>
     </form>
     <!-- <script src="js/script.js"></script> -->
     <script src="js/try.js"></script>
