Use grid to add download button

--- a/index.html
+++ b/index.html
@@ -178,9 +178,12 @@
         <li>Click "Retrieve Timetable"</li>
       </ol>
       <div id="content">
-        <label for="link">Link:</label>
-        <input id="link" name="link" type="text" placeholder="timetable.leeds.ac.uk/..." />
-        <button>Retrieve Timetable</button>
+        <div id="box">
+          <label for="link">Link:</label>
+          <input id="link" name="link" type="text" placeholder="timetable.leeds.ac.uk/..." />
+        </div>
+        <button id="retrieve">Retrieve Timetable</button>
+        <button id="download">Download .ics</button>
       </div>
     </form>
     <!-- <script src="js/script.js"></script> -->
