Add theme-color manipulation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         } else {
           document.body.classList.remove('dark')
         }
+        themeColor.content = getComputedStyle(document.body).getPropertyValue('--background')
       }
       checkMode()
     </script>
