CR fixes: - Code style - Some refactoring - Minor performance improvements - 35 week bugfix

--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
       media="screen"
       href="css/style.css"
     />
-    <script src="js/ics.deps.min.js"></script>
-    <script src="js/ics.min.js"></script>
   </head>
 
   <body>
@@ -191,6 +189,8 @@
       <p>This tool uses the <a href="https://github.com/nwcell/ics.js/">ics.js</a> library, which is licensed under <a href="./ics-js-license.txt">the MIT license</a>. </p>
     </form>
     <!-- <script src="js/script.js"></script> -->
+    <script src="js/lib/ics.deps.min.js"></script>
+    <script src="js/lib/ics.min.js"></script>
     <script src="js/try.js"></script>
   </body>
 </html>
