--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <button id="retrieve">Retrieve Timetable</button>
         <button id="download">Download .ics</button>
       </div>
-      <p>This website uses the <a href="https://github.com/nwcell/ics.js/">ics.js</a> library, which is licensed under <a href="./ics-js-license.txt">the MIT license</a>. </p>
+      <p>This website uses the <a href="https://github.com/nwcell/ics.js/">ics.js</a> library, which is licensed under the <a href="./ics-js-license.txt">MIT license</a>.</p>
     </form>
     <!-- <script src="js/script.js"></script> -->
     <script src="js/lib/ics.deps.min.js"></script>
