Rework SVG title

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           />
         </svg>
         <svg id="mode" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-          <title>Switch display mode</title>
+          <title>Switch mode</title>
           <path
             class="dark"
             d="M-14.2 13.14h-.03l-2.1.56-.56-2.11-.02-.01L-19 11l.56-2.1v-.03L-20 7.34l1.54-1.54v-.02l-.56-2.11 2.11-.56.02-.02.56-2.1 2.1.56h.03L-12.66 0l1.54 1.54h.03L-9 .99l.57 2.11.01.02 2.11.56-.56 2.1v.03l1.54 1.54-1.54 1.54v.02l.56 2.11-2.11.57-.01.01L-9 13.7l-2.1-.56h-.02l-1.54 1.54z"
