--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="ostrio-domain" content="9RnHRmMI2vcOpGCX-M943G2CCiS-hBisM2Y-6zbjx_I">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
