--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="ostrio-domain" content="9RnHRmMI2vcOpGCX-M943G2CCiS-hBisM2Y-6zbjx_I">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -211,5 +210,11 @@
     <script src="js/lib/ics.deps.min.js"></script>
     <script src="js/lib/ics.min.js"></script>
     <script src="js/script.js"></script>
+
+    <script>
+      const clicky_site_ids = []
+      clicky_site_ids.push(101232993)
+    </script>
+    <script async src="//static.getclicky.com/js"></script>
   </body>
 </html>
