--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       content="A cleaner layout for the University of Leeds timetable. Works offline!"
     />
 
-    <title>UofL Timetable</title>
+    <title>UoL Timetable</title>
 
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="build/bundle.css" />
