--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,11 @@
     <link rel="stylesheet" href="build/bundle.css" />
 
     <script defer src="build/bundle.js"></script>
+    <script
+      data-goatcounter="https://usamausmantimetable.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
   </head>
 
   <body></body>
